examples/test/testpolicy19249.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19249
  namespace: namespace451
spec:
  podSelector:
    matchLabels:
      key2: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value5
      podSelector:
        matchLabels:
          key7: value26
          key39: value35
          key4: value5
